增加消息发送定时任务

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+mq.host = 10.0.45.222
+mq.port = 5672
+mq.username = yxt 
+mq.pwd = qwer
+mq.vhost = yxthost
 
+mq.queue = test-queue
+mq.queue.durable = true
+mq.queue.exclusive = false
+mq.queue.autoDelete = false
+
+mq.exchange = test-exchange
+mq.exchange.durable = true
+mq.exchange.autoDelete = false
+
+mq.routeKey = test.key
